# herwig_installation

./: README.md  herwig-bootstrap  main.py  pyproject.toml
src/HJets-1.3/: AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.status  configure  configure.ac  libtool
src/HJets-1.3/Amplitudes/: AmplitudeBase.cc  AmplitudeBase.cc.in  AmplitudeBase.h  AmplitudeBase.lo  Amplitudehqqbarkkbar.cc  Amplitudehqqbarkkbar.h  Amplitudehqqbarkkbar.lo  Amplitudehqqbarkkbarg.cc  Amplitudehqqbarkkbarg.lo  Amplitudehqqbarkkbargg.cc  Amplitudehqqbarkkbargg.lo  Amplitudehqqbarkkbarrrbar.cc  Amplitudehqqbarkkbarrrbar.lo  HJets.la  HJetsProcessInfo.cc  HJetsProcessInfo.h  HJetsProcessInfo.lo  Makefile  Makefile.am  Makefile.in
src/HJets-1.3/Amplitudes/.deps/: AmplitudeBase.Plo  Amplitudehqqbarkkbar.Plo  Amplitudehqqbarkkbarg.Plo  Amplitudehqqbarkkbargg.Plo  Amplitudehqqbarkkbarrrbar.Plo  HJetsProcessInfo.Plo
src/HJets-1.3/Amplitudes/.libs/: HJets.la
src/HJets-1.3/Virtuals/: Makefile  Makefile.am  Makefile.in  libHJetsVirtuals.la
src/HJets-1.3/Virtuals/.libs/: libHJetsVirtuals.la
src/HJets-1.3/Virtuals/Amplitudes/: Makefile  Makefile.am  Makefile.in  libAmplitudes.la
src/HJets-1.3/Virtuals/Amplitudes/.libs/: libAmplitudes.la
src/HJets-1.3/Virtuals/Amplitudes/Vertline/: Vertlinetemp.f  Vertlinetemp.lo
src/HJets-1.3/Virtuals/Amplitudes/boxlines/: box_gauge.F  box_gauge.lo  boxlineABE.f  boxlineABE.lo  boxlineABEDiv.f  boxlineABEDiv.lo  boxlineABETotal.lo  boxlineNoAbe.f  boxlineNoAbe.lo  boxlineNoAbeDiv.f  boxlineNoAbeDiv.lo  boxlineNoAbeTotal.f  boxlineNoAbeTotal.lo
src/HJets-1.3/Virtuals/Amplitudes/vbfHjj/Cross/: HjjCrosstemp66.f  HjjCrosstemp66.lo  HjjCrosstemp66Div.f  HjjCrosstemp66Div.lo  HjjCrosstemp67.f  HjjCrosstemp67.lo  HjjCrosstemp67Div.f  HjjCrosstemp67Div.lo  HjjCrosstemp76.f  HjjCrosstemp76.lo  HjjCrosstemp76Div.f  HjjCrosstemp76Div.lo  HjjCrosstemp77.f  HjjCrosstemp77.lo  HjjCrosstemp77Div.f  HjjCrosstemp77Div.lo  HjjCrosstempFF1.f  HjjCrosstempFF1.lo  HjjCrosstempFF2.f  HjjCrosstempFF2.lo  HjjCrosstempTotal_c.f  HjjCrosstempTotal_c.lo
src/HJets-1.3/Virtuals/Amplitudes/vbfHjj/CrossF/: HjjCrossFtemp66.f  HjjCrossFtemp66.lo  HjjCrossFtemp66Div.f  HjjCrossFtemp66Div.lo  HjjCrossFtemp67.f  HjjCrossFtemp67.lo  HjjCrossFtemp67Div.f  HjjCrossFtemp67Div.lo  HjjCrossFtemp76.f  HjjCrossFtemp76.lo  HjjCrossFtemp76Div.f  HjjCrossFtemp76Div.lo  HjjCrossFtemp77.f  HjjCrossFtemp77.lo  HjjCrossFtemp77Div.f  HjjCrossFtemp77Div.lo  HjjCrossFtempFF1.f  HjjCrossFtempFF1.lo  HjjCrossFtempFF2.f  HjjCrossFtempFF2.lo  (+2 more)
src/HJets-1.3/Virtuals/Integrals/: B0C0D01Mas.f  B0C0D01Mas.lo  B0C0D01MasG.f  B0C0D01MasG.lo  D0Functions.f  D0Functions.lo  D0FunctionsDiv.lo  E0FunctionsG.lo  E0FunctionsG_c.f  E0FunctionsG_c.lo  F6G.f  F6G.lo  F6G_c.f  F6G_c.lo  Makefile  Makefile.am  Makefile.in  dilog.f  dilogComplex.f  dilogComplex.lo  libIntegrals.la  scalarints.f  scalarints.lo
src/HJets-1.3/Virtuals/Integrals/.libs/: libIntegrals.la
src/HJets-1.3/Virtuals/MatrixElement/: Makefile  Makefile.am  Makefile.in  MatrixElement.f  MatrixElement.lo  libMatrixElement.la  qqHqq.f  qqHqq.lo  qqHqqg.f  qqHqqg.lo  test.f
src/HJets-1.3/Virtuals/MatrixElement/.libs/: libMatrixElement.la
src/HJets-1.3/Virtuals/OneLOop/: Makefile  Makefile.in  avh_olo.f90  avh_olo.lo  avh_olo.mod  avh_olo_bern.mod  avh_olo_box.mod  avh_olo_boxc.mod  avh_olo_bub.mod  avh_olo_func.mod  avh_olo_kinds.mod  avh_olo_li2a.mod  avh_olo_li2c.mod  avh_olo_li2c2.mod  avh_olo_loga.mod  avh_olo_loga2.mod  avh_olo_logc.mod  avh_olo_logc2.mod  avh_olo_print.mod  avh_olo_tri.mod  avh_olo_units.mod  avh_olo_xkind.mod  libOneLOop.la
src/HJets-1.3/Virtuals/OneLOop/.libs/: libOneLOop.la
src/HJets-1.3/Virtuals/TenRed/: Makefile  Makefile.am  Makefile.in  libTenRed.la
src/HJets-1.3/Virtuals/TenRed/.libs/: libTenRed.la
src/HJets-1.3/Virtuals/TenRed/General/: tensor_redux_Bij_Complex_G.f  tensor_redux_Bij_Complex_G.lo  tensor_redux_Bij_Complex_G_Div.f  tensor_redux_Bij_Complex_G_Div.lo  tensor_redux_Bij_new_Re_Com.f  tensor_redux_Bij_new_Re_Com.lo  tensor_redux_Bij_new_Re_Com_Div.f  tensor_redux_Bij_new_Re_Com_Div.lo  tensor_redux_Cij_Complex_G.f  tensor_redux_Cij_Complex_G.lo  tensor_redux_Cij_Complex_G_Div.f  tensor_redux_Cij_Complex_G_Div.lo  tensor_redux_Cij_new_Re_Com_G.f  tensor_redux_Cij_new_Re_Com_G.lo  tensor_redux_Cij_new_Re_Com_G_Div.f  tensor_redux_Cij_new_Re_Com_G_Div.lo  tensor_redux_Dij_Complex_G.f  tensor_redux_Dij_Complex_G.lo  tensor_redux_Dij_Complex_G_Div.f  tensor_redux_Dij_Complex_G_Div.lo  tensor_redux_Dij_new_Re_Com_G.f  tensor_redux_Dij_new_Re_Com_G.lo  tensor_redux_Dij_new_Re_Com_G_Div.f  tensor_redux_Dij_new_Re_Com_G_Div.lo  tensor_redux_Eij_Complex_G.f  tensor_redux_Eij_Complex_G.lo  tensor_redux_Eij_new_Re_Com_G.f  tensor_redux_Eij_new_Re_Com_G.lo  tensor_redux_Fij_Complex_G.f  tensor_redux_Fij_Complex_G.lo  tensor_redux_Fij_new_Re_Com_G.f  tensor_redux_Fij_new_Re_Com_G.lo
src/HJets-1.3/Virtuals/TenRed/MassLess/: tensor_redux_Cij_Div.lo  tensor_redux_Cij_new_Re_Com.lo  tensor_redux_Dij_Div.F  tensor_redux_Dij_Div.lo  tensor_redux_Dij_new_Re_Com.F  tensor_redux_Dij_new_Re_Com.lo
src/HJets-1.3/Virtuals/TenRed/XGet/: FDgetCrossF_Div.f  FDgetCrossF_Div.lo  FDgetCrossF_Div_c.f  FDgetCrossF_Div_c.lo  FDgetCrossIF_Div.f  FDgetCrossIF_Div.lo  FDgetCrossIF_Div_c.f  FDgetCrossIF_Div_c.lo  FDgetCross_Div.f  FDgetCross_Div.lo  FDgetCross_Div_c.f  FDgetCross_Div_c.lo  FDget_Div.f  FDget_Div.lo  FDget_Div_c.f  FDget_Div_c.lo  NoAbeFDgetCrossF_Div.f  NoAbeFDgetCrossF_Div.lo  NoAbeFDgetCrossIF_Div.f  NoAbeFDgetCrossIF_Div.lo  NoAbeFDgetCross_Div.f  NoAbeFDgetCross_Div.lo  NoAbeFDget_Div.f  NoAbeFDget_Div.lo
src/HJets-1.3/Virtuals/Utilities/: Makefile  Makefile.am  Makefile.in  dotprod.f  dotprod.lo  dotproducts.F  dotproducts.lo  libUtilities.la
src/HJets-1.3/Virtuals/Utilities/.libs/: libUtilities.la
src/HJets-1.3/include/: Makefile  Makefile.am  Makefile.in
src/HJets-1.3/include/HJets/: Amplitudes
src/HJets-1.3/m4/: HJets.m4
src/HJets-1.3/src/: Makefile  Makefile.am  Makefile.in
(+4993 files in other folders)
