pkglib_LTLIBRARIES = HJets.la
HJets_la_LDFLAGS = -module -version-info 11:1:0

HJets_la_LIBADD = $(top_builddir)/Virtuals/libHJetsVirtuals.la

HJets_la_SOURCES =  \
AmplitudeBase.h \
Amplitudehqqbarkkbarrrbar.h \
Amplitudehqqbarkkbargg.h \
Amplitudehqqbarkkbarg.h \
Amplitudehqqbarkkbar.h \
HJetsProcessInfo.h \
AmplitudeBase.cc \
Amplitudehqqbarkkbar.cc \
Amplitudehqqbarkkbarg.cc \
Amplitudehqqbarkkbargg.cc \
Amplitudehqqbarkkbarrrbar.cc \
HJetsProcessInfo.cc
