SUBDIRS = Amplitudes Integrals TenRed Utilities MatrixElement OneLOop

noinst_LTLIBRARIES = libHJetsVirtuals.la
libHJetsVirtuals_la_LDFLAGS = -module -version-info 1:0:0

libHJetsVirtuals_la_SOURCES =

libHJetsVirtuals_la_LIBADD = \
OneLOop/libOneLOop.la \
Amplitudes/libAmplitudes.la \
Integrals/libIntegrals.la \
TenRed/libTenRed.la \
Utilities/libUtilities.la \
MatrixElement/libMatrixElement.la
