noinst_LTLIBRARIES = libAmplitudes.la

libAmplitudes_la_SOURCES = \
boxlines/box_gauge.F \
boxlines/boxlineABEDiv.f \
boxlines/boxlineABE.f \
boxlines/boxlineABETotal.f \
boxlines/boxlineNoAbeDiv.f \
boxlines/boxlineNoAbe.f \
boxlines/boxlineNoAbeTotal.f \
Vertline/Vertlinetemp.f \
vbfHjj/Cross/HjjCrosstemp66Div.f \
vbfHjj/Cross/HjjCrosstemp66.f \
vbfHjj/Cross/HjjCrosstemp67Div.f \
vbfHjj/Cross/HjjCrosstemp67.f \
vbfHjj/Cross/HjjCrosstemp76Div.f \
vbfHjj/Cross/HjjCrosstemp76.f \
vbfHjj/Cross/HjjCrosstemp77Div.f \
vbfHjj/Cross/HjjCrosstemp77.f \
vbfHjj/Cross/HjjCrosstempFF1.f \
vbfHjj/Cross/HjjCrosstempFF2.f \
vbfHjj/Cross/HjjCrosstempTotal_c.f \
vbfHjj/CrossF/HjjCrossFtemp66Div.f \
vbfHjj/CrossF/HjjCrossFtemp66.f \
vbfHjj/CrossF/HjjCrossFtemp67Div.f \
vbfHjj/CrossF/HjjCrossFtemp67.f \
vbfHjj/CrossF/HjjCrossFtemp76Div.f \
vbfHjj/CrossF/HjjCrossFtemp76.f \
vbfHjj/CrossF/HjjCrossFtemp77Div.f \
vbfHjj/CrossF/HjjCrossFtemp77.f \
vbfHjj/CrossF/HjjCrossFtempFF1.f \
vbfHjj/CrossF/HjjCrossFtempFF2.f \
vbfHjj/CrossF/HjjCrossFtempTotal_c.f \
vbfHjj/CrossIF/HjjCrossIFtemp66Div.f \
vbfHjj/CrossIF/HjjCrossIFtemp66.f \
vbfHjj/CrossIF/HjjCrossIFtemp67Div.f \
vbfHjj/CrossIF/HjjCrossIFtemp67.f \
vbfHjj/CrossIF/HjjCrossIFtemp76Div.f \
vbfHjj/CrossIF/HjjCrossIFtemp76.f \
vbfHjj/CrossIF/HjjCrossIFtemp77Div.f \
vbfHjj/CrossIF/HjjCrossIFtemp77.f \
vbfHjj/CrossIF/HjjCrossIFtempFF1.f \
vbfHjj/CrossIF/HjjCrossIFtempFF2.f \
vbfHjj/CrossIF/HjjCrossIFtempTotal_c.f \
vbfHjj/Dir/Hjjtemp66Div.f \
vbfHjj/Dir/Hjjtemp66.f \
vbfHjj/Dir/Hjjtemp67Div.f \
vbfHjj/Dir/Hjjtemp67.f \
vbfHjj/Dir/Hjjtemp76Div.f \
vbfHjj/Dir/Hjjtemp76.f \
vbfHjj/Dir/Hjjtemp77Div.f \
vbfHjj/Dir/Hjjtemp77.f \
vbfHjj/Dir/HjjtempFF1.f \
vbfHjj/Dir/HjjtempFF2.f \
vbfHjj/Dir/HjjtempTotal_c.f \
vbfHjjj/CM_Cross/H3jCrosstemp66_c.f \
vbfHjjj/CM_Cross/H3jCrosstemp66_Div_c.f \
vbfHjjj/CM_Cross/H3jCrosstemp67_c.f \
vbfHjjj/CM_Cross/H3jCrosstemp67_Div_c.f \
vbfHjjj/CM_Cross/H3jCrosstemp76_c.f \
vbfHjjj/CM_Cross/H3jCrosstemp76_Div_c.f \
vbfHjjj/CM_Cross/H3jCrosstemp77_c.f \
vbfHjjj/CM_Cross/H3jCrosstemp77_Div_c.f \
vbfHjjj/CM_Cross/H3jCrosstempT_c.f \
vbfHjjj/CM_CrossF/H3jCrossFtemp66_c.f \
vbfHjjj/CM_CrossF/H3jCrossFtemp66_Div_c.f \
vbfHjjj/CM_CrossF/H3jCrossFtemp67_c.f \
vbfHjjj/CM_CrossF/H3jCrossFtemp67_Div_c.f \
vbfHjjj/CM_CrossF/H3jCrossFtemp76_c.f \
vbfHjjj/CM_CrossF/H3jCrossFtemp76_Div_c.f \
vbfHjjj/CM_CrossF/H3jCrossFtemp77_c.f \
vbfHjjj/CM_CrossF/H3jCrossFtemp77_Div_c.f \
vbfHjjj/CM_CrossF/H3jCrossFtempT_c.f \
vbfHjjj/CM_CrossIF/H3jCrossIFtemp66_c.f \
vbfHjjj/CM_CrossIF/H3jCrossIFtemp66_Div_c.f \
vbfHjjj/CM_CrossIF/H3jCrossIFtemp67_c.f \
vbfHjjj/CM_CrossIF/H3jCrossIFtemp67_Div_c.f \
vbfHjjj/CM_CrossIF/H3jCrossIFtemp76_c.f \
vbfHjjj/CM_CrossIF/H3jCrossIFtemp76_Div_c.f \
vbfHjjj/CM_CrossIF/H3jCrossIFtemp77_c.f \
vbfHjjj/CM_CrossIF/H3jCrossIFtemp77_Div_c.f \
vbfHjjj/CM_CrossIF/H3jCrossIFtempT_c.f \
vbfHjjj/CM_Dir/H3jjjtempT_c.f \
vbfHjjj/CM_Dir/H3jtemp66_c.f \
vbfHjjj/CM_Dir/H3jtemp66_Div_c.f \
vbfHjjj/CM_Dir/H3jtemp67_c.f \
vbfHjjj/CM_Dir/H3jtemp67_Div_c.f \
vbfHjjj/CM_Dir/H3jtemp76_c.f \
vbfHjjj/CM_Dir/H3jtemp76_Div_c.f \
vbfHjjj/CM_Dir/H3jtemp77_c.f \
vbfHjjj/CM_Dir/H3jtemp77_Div_c.f \
vbfHjjj/Cross/H3jCrosstemp66_Div.f \
vbfHjjj/Cross/H3jCrosstemp66.f \
vbfHjjj/Cross/H3jCrosstemp67_Div.f \
vbfHjjj/Cross/H3jCrosstemp67.f \
vbfHjjj/Cross/H3jCrosstemp76_Div.f \
vbfHjjj/Cross/H3jCrosstemp76.f \
vbfHjjj/Cross/H3jCrosstemp77_Div.f \
vbfHjjj/Cross/H3jCrosstemp77.f \
vbfHjjj/Cross/H3jCrosstempFa1.f \
vbfHjjj/Cross/H3jCrosstempFa2.f \
vbfHjjj/Cross/H3jCrosstempFF1.f \
vbfHjjj/Cross/H3jCrosstempFF2.f \
vbfHjjj/Cross/H3jCrosstempFF3.f \
vbfHjjj/Cross/H3jCrosstempFF4.f \
vbfHjjj/Cross/H3jCrosstempFF5.f \
vbfHjjj/Cross/H3jCrosstempT.f \
vbfHjjj/CrossF/H3jCrossFtemp66_Div.f \
vbfHjjj/CrossF/H3jCrossFtemp66.f \
vbfHjjj/CrossF/H3jCrossFtemp67_Div.f \
vbfHjjj/CrossF/H3jCrossFtemp67.f \
vbfHjjj/CrossF/H3jCrossFtemp76_Div.f \
vbfHjjj/CrossF/H3jCrossFtemp76.f \
vbfHjjj/CrossF/H3jCrossFtemp77_Div.f \
vbfHjjj/CrossF/H3jCrossFtemp77.f \
vbfHjjj/CrossF/H3jCrossFtempFa1.f \
vbfHjjj/CrossF/H3jCrossFtempFa2.f \
vbfHjjj/CrossF/H3jCrossFtempFF1.f \
vbfHjjj/CrossF/H3jCrossFtempFF2.f \
vbfHjjj/CrossF/H3jCrossFtempFF3.f \
vbfHjjj/CrossF/H3jCrossFtempFF4.f \
vbfHjjj/CrossF/H3jCrossFtempFF5.f \
vbfHjjj/CrossF/H3jCrossFtempT.f \
vbfHjjj/CrossIF/H3jCrossIFtemp66_Div.f \
vbfHjjj/CrossIF/H3jCrossIFtemp66.f \
vbfHjjj/CrossIF/H3jCrossIFtemp67_Div.f \
vbfHjjj/CrossIF/H3jCrossIFtemp67.f \
vbfHjjj/CrossIF/H3jCrossIFtemp76_Div.f \
vbfHjjj/CrossIF/H3jCrossIFtemp76.f \
vbfHjjj/CrossIF/H3jCrossIFtemp77_Div.f \
vbfHjjj/CrossIF/H3jCrossIFtemp77.f \
vbfHjjj/CrossIF/H3jCrossIFtempFa1.f \
vbfHjjj/CrossIF/H3jCrossIFtempFa2.f \
vbfHjjj/CrossIF/H3jCrossIFtempFF1.f \
vbfHjjj/CrossIF/H3jCrossIFtempFF2.f \
vbfHjjj/CrossIF/H3jCrossIFtempFF3.f \
vbfHjjj/CrossIF/H3jCrossIFtempFF4.f \
vbfHjjj/CrossIF/H3jCrossIFtempFF5.f \
vbfHjjj/CrossIF/H3jCrossIFtempT.f \
vbfHjjj/Dir/H3jjjtempT.f \
vbfHjjj/Dir/H3jtemp66_Div.f \
vbfHjjj/Dir/H3jtemp66.f \
vbfHjjj/Dir/H3jtemp67_Div.f \
vbfHjjj/Dir/H3jtemp67.f \
vbfHjjj/Dir/H3jtemp76_Div.f \
vbfHjjj/Dir/H3jtemp76.f \
vbfHjjj/Dir/H3jtemp77_Div.f \
vbfHjjj/Dir/H3jtemp77.f \
vbfHjjj/Dir/H3jtempFa1.f \
vbfHjjj/Dir/H3jtempFa2.f \
vbfHjjj/Dir/H3jtempFF1.f \
vbfHjjj/Dir/H3jtempFF2.f \
vbfHjjj/Dir/H3jtempFF3.f \
vbfHjjj/Dir/H3jtempFF4.f \
vbfHjjj/Dir/H3jtempFF5.f \
vbfHjjj/NoAbe/NoAbeH3jtemp66Div.f \
vbfHjjj/NoAbe/NoAbeH3jtemp66.f \
vbfHjjj/NoAbe/NoAbeH3jtemp67Div.f \
vbfHjjj/NoAbe/NoAbeH3jtemp67.f \
vbfHjjj/NoAbe/NoAbeH3jtemp76Div.f \
vbfHjjj/NoAbe/NoAbeH3jtemp76.f \
vbfHjjj/NoAbe/NoAbeH3jtemp77Div.f \
vbfHjjj/NoAbe/NoAbeH3jtemp77.f \
vbfHjjj/NoAbe/NoAbeH3jtempFa1.f \
vbfHjjj/NoAbe/NoAbeH3jtempFa2.f \
vbfHjjj/NoAbe/NoAbeH3jtempFF1.f \
vbfHjjj/NoAbe/NoAbeH3jtempFF2.f \
vbfHjjj/NoAbe/NoAbeH3jtempFF3.f \
vbfHjjj/NoAbe/NoAbeH3jtempFF4.f \
vbfHjjj/NoAbe/NoAbeH3jtempFF5.f \
vbfHjjj/NoAbe/NoAbeH3jtempT.f \
vbfHjjj/NoAbeCross/NoAbeH3jCrosstemp66Div.f \
vbfHjjj/NoAbeCross/NoAbeH3jCrosstemp66.f \
vbfHjjj/NoAbeCross/NoAbeH3jCrosstemp67Div.f \
vbfHjjj/NoAbeCross/NoAbeH3jCrosstemp67.f \
vbfHjjj/NoAbeCross/NoAbeH3jCrosstemp76Div.f \
vbfHjjj/NoAbeCross/NoAbeH3jCrosstemp76.f \
vbfHjjj/NoAbeCross/NoAbeH3jCrosstemp77Div.f \
vbfHjjj/NoAbeCross/NoAbeH3jCrosstemp77.f \
vbfHjjj/NoAbeCross/NoAbeH3jCrosstempFa1.f \
vbfHjjj/NoAbeCross/NoAbeH3jCrosstempFa2.f \
vbfHjjj/NoAbeCross/NoAbeH3jCrosstempFF1.f \
vbfHjjj/NoAbeCross/NoAbeH3jCrosstempFF2.f \
vbfHjjj/NoAbeCross/NoAbeH3jCrosstempFF3.f \
vbfHjjj/NoAbeCross/NoAbeH3jCrosstempFF4.f \
vbfHjjj/NoAbeCross/NoAbeH3jCrosstempFF5.f \
vbfHjjj/NoAbeCross/NoAbeH3jCrosstempT.f \
vbfHjjj/NoAbeCrossF/NoAbeH3jCrossFtemp66Div.f \
vbfHjjj/NoAbeCrossF/NoAbeH3jCrossFtemp66.f \
vbfHjjj/NoAbeCrossF/NoAbeH3jCrossFtemp67Div.f \
vbfHjjj/NoAbeCrossF/NoAbeH3jCrossFtemp67.f \
vbfHjjj/NoAbeCrossF/NoAbeH3jCrossFtemp76Div.f \
vbfHjjj/NoAbeCrossF/NoAbeH3jCrossFtemp76.f \
vbfHjjj/NoAbeCrossF/NoAbeH3jCrossFtemp77Div.f \
vbfHjjj/NoAbeCrossF/NoAbeH3jCrossFtemp77.f \
vbfHjjj/NoAbeCrossF/NoAbeH3jCrossFtempFa1.f \
vbfHjjj/NoAbeCrossF/NoAbeH3jCrossFtempFa2.f \
vbfHjjj/NoAbeCrossF/NoAbeH3jCrossFtempFF1.f \
vbfHjjj/NoAbeCrossF/NoAbeH3jCrossFtempFF2.f \
vbfHjjj/NoAbeCrossF/NoAbeH3jCrossFtempFF3.f \
vbfHjjj/NoAbeCrossF/NoAbeH3jCrossFtempFF4.f \
vbfHjjj/NoAbeCrossF/NoAbeH3jCrossFtempFF5.f \
vbfHjjj/NoAbeCrossF/NoAbeH3jCrossFtempT.f \
vbfHjjj/NoAbeCrossIF/NoAbeH3jCrossIFtemp66Div.f \
vbfHjjj/NoAbeCrossIF/NoAbeH3jCrossIFtemp66.f \
vbfHjjj/NoAbeCrossIF/NoAbeH3jCrossIFtemp67Div.f \
vbfHjjj/NoAbeCrossIF/NoAbeH3jCrossIFtemp67.f \
vbfHjjj/NoAbeCrossIF/NoAbeH3jCrossIFtemp76Div.f \
vbfHjjj/NoAbeCrossIF/NoAbeH3jCrossIFtemp76.f \
vbfHjjj/NoAbeCrossIF/NoAbeH3jCrossIFtemp77Div.f \
vbfHjjj/NoAbeCrossIF/NoAbeH3jCrossIFtemp77.f \
vbfHjjj/NoAbeCrossIF/NoAbeH3jCrossIFtempFa1.f \
vbfHjjj/NoAbeCrossIF/NoAbeH3jCrossIFtempFa2.f \
vbfHjjj/NoAbeCrossIF/NoAbeH3jCrossIFtempFF1.f \
vbfHjjj/NoAbeCrossIF/NoAbeH3jCrossIFtempFF2.f \
vbfHjjj/NoAbeCrossIF/NoAbeH3jCrossIFtempFF3.f \
vbfHjjj/NoAbeCrossIF/NoAbeH3jCrossIFtempFF4.f \
vbfHjjj/NoAbeCrossIF/NoAbeH3jCrossIFtempFF5.f \
vbfHjjj/NoAbeCrossIF/NoAbeH3jCrossIFtempT.f
