noinst_LTLIBRARIES = libTenRed.la

libTenRed_la_SOURCES = \
General/tensor_redux_Bij_Complex_G_Div.f \
General/tensor_redux_Bij_Complex_G.f \
General/tensor_redux_Bij_new_Re_Com_Div.f \
General/tensor_redux_Bij_new_Re_Com.f \
General/tensor_redux_Cij_Complex_G_Div.f \
General/tensor_redux_Cij_Complex_G.f \
General/tensor_redux_Cij_new_Re_Com_G_Div.f \
General/tensor_redux_Cij_new_Re_Com_G.f \
General/tensor_redux_Dij_Complex_G_Div.f \
General/tensor_redux_Dij_Complex_G.f \
General/tensor_redux_Dij_new_Re_Com_G_Div.f \
General/tensor_redux_Dij_new_Re_Com_G.f \
General/tensor_redux_Eij_Complex_G.f \
General/tensor_redux_Eij_new_Re_Com_G.f \
General/tensor_redux_Fij_Complex_G.f \
General/tensor_redux_Fij_new_Re_Com_G.f \
MassLess/tensor_redux_Cij_Div.f \
MassLess/tensor_redux_Cij_new_Re_Com.F \
MassLess/tensor_redux_Dij_Div.F \
MassLess/tensor_redux_Dij_new_Re_Com.F \
XGet/FDgetCross_Div_c.f \
XGet/FDgetCross_Div.f \
XGet/FDgetCrossF_Div_c.f \
XGet/FDgetCrossF_Div.f \
XGet/FDgetCrossIF_Div_c.f \
XGet/FDgetCrossIF_Div.f \
XGet/FDget_Div_c.f \
XGet/FDget_Div.f \
XGet/NoAbeFDgetCross_Div.f \
XGet/NoAbeFDgetCrossF_Div.f \
XGet/NoAbeFDgetCrossIF_Div.f \
XGet/NoAbeFDget_Div.f
